# smtping

./: .gitignore  flake.nix  pyproject.toml
src/smtping/: __init__.py  pymsg.py  server.py
tests/: test_unit.py
