[project]
name = "smtping"
version = "0.1.0"
description = "Mock SMTP server"
requires-python = ">=3.12"
dependencies = [
 "aiosmtpd>=1.4.6",
]

[project.scripts]
smtping = "smtping:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.12.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
anyio_mode = "auto"
